--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,11 +1,3 @@
-name = "cf-worker-ws-dev-0415" # todo
-#name = "cf-worker-connect-test" # todo
-#main = "test/worker/cf-cdn-cgi-trace2.js"
-
-#main = "test/worker/worker-connect-test.js"
+name = "cf-workers-vless" # todo
 main = "src/worker-vless.js"
-
 compatibility_date = "2024-04-15"
-
-[vars]
-# UUID = "example_dev_token"
